deploy/cluster-manager/olm-catalog/latest/manifests/cluster-manager-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cluster-manager-network-policy
spec:
  podSelector:
    matchLabels:
      app: cluster-manager
  policyTypes:
  - Ingress
  - Egress
  egress:
  # DNS
  - ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 5353
    - protocol: TCP
      port: 5353
  # Kubernetes API
  - ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 6443
